= Version History =
x.x:
- added: Elgg 1.8.15 core files
- changed: temporary fix to copy Piwik setting from phloor_analytics_piwik to analytics
- changed: subsite acl display name now contains more text
- changed: new subsite now have their default access set to the subsite level
- changed: some depricated functions to the new functions
- changed: handling of saving the site url (inline with Elgg core)
- fixed: PHP notice undeclared variable
- fixed: PHP warning in content_stats widget
- fixed: PHP undefined index warnings in web_services.php
- fixed: error in subsite profile field configuration
- fixed: wrong handling of metastring based objects hook
- fixed: page owner not found in Tidypics
- fixed: cleanup of all membership requests on accept/decline
- fixed: problem with incomplete CSS/JS on subsite create
- fixed: problem with some plugins not activating on subsite create
- fixed: livesearch now limits groups to the current site
- removed: Elgg 1.8.3 core files in preparation for Elgg 1.8.15

2.1 (2013-04-05):
- changed: made compatible with Elgg 1.8.14
- fixed: deprecated notice in pages/subsites/list.php

2.0 (2012-07-12):

- fixed: no_access forward to last page if can join
- fixed: plugin settings reset (memcache issue)
- fixed: error on advanced site update for super admins
- fixed: problem with site email address
- removed: sharing with subsite acls on main site

2.0 beta 1 (2012-05-14):

- first version for Elgg 1.8

1.18 (2012-01-03):

- added: groups.php core file for modifications
- fixed: container_permissions_check for subsite admins
- fixed: reset translation_editor cache on "upgrade all"
- fixed: invite link on subsites
- changed: email invitations for subsites are now stored and checked in lowercase

1.17 (2011-11-15):

- added: some stats in subsite admin listing, can be user for cleanup)
- changed: robots indexing
- changed: filtering of subsites (now tabbed)
- changed: search listing view of subsites