@@ -1,6 +1,7 @@
 = Version History =
 x.x:
 - added: Elgg 1.8.15 core files
+- added: Memcache namespace prefix and stats logging
 - changed: temporary fix to copy Piwik setting from phloor_analytics_piwik to analytics
 - changed: subsite acl display name now contains more text
 - changed: new subsite now have their default access set to the subsite level
